discussion/kv_engine/173031/173031_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51295: Remove CM::checkpointDisposer

Originally used to handle Eager in prod code and Lazy in test code.

Change-Id: I8935bf270a4a1349b394b89a5f5945e4d7b5aea4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-04-07 14:11:20.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-07 14:49:02.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16479/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10: error: "hdr_histogram.h" file not found [clang-diagnostic-error]
#include <hdr_histogram.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16479/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10:
error: "hdr_histogram.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16479/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45074/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37862/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15414/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6133/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19281/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18250/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18586/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17345/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26660/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6193/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
